    * Added affil_hide, affil_weight, Google scholar, student info, and executive courses fields to the profile
    * Fixed dept file caching fallback for migrations
    * Fixed issue where affiliations were being unnecessarily deleted and recreated during migrations

  * ASU Brand (asu_brand v7.x-1.18)
    * Fixed the 'do not override' list to use JS instead of relying on the hosts header

Webspark 1.46.1 (Omaha) release notes, 2017-12-09 
-------------------------------------------------
An upstream update, Webspark v1.46.1 (Omaha), has been released. It provides a bug fix to the ASU Directory Integration Reinvented (ASU DIR) module. 

Webspark 1.46 (Nebraska) release notes, 2017-27-08
--------------------------------------------------
An upstream update, Webspark v1.46 (Nebraska), has been released. It includes major updates to Drupal core (v7.56) and the Panopoly (v1.46) distribution. Note that there will be no Webspark 1.44 or 1.45 releases since we are updating from Panopoly 1.43 to 1.46. 

Webspark 1.43 (Colorado) release, 2017-16-05
--------------------------------------------
- Webspark core 

    * Drupal core (v7.54) - This includes security and non-security updates, including:
        * Old module cruft cleanup - Background: Drupal 7.50+ has a new check for erroneous entries that remain
          in the Drupal database system table when a previously enabled module's code is deleted without going through
          the proper disable/uninstall process (usually if the module had an .install file with hook_uninstall in it.)
          Webspark will start throwing new errors for logged-in site administrators in those cases. To get rid of these
          error messages, go to /admin/reports/status and look for "Missing Module" instructions to follow.
        * Some iframe tags will now work (as long as the iframe is pulling content from the SAMEORIGIN).