@@ -2,7 +2,7 @@ name = ASU Spotlight
 description = This module allows placement of a  flexslider-enabled slideshow; complete with optional title, description, and action-button placement.
 core = 7.x
 package = ASU Webspark
-version = 7.x-1.7
+version = 7.x-1.7.1
 project = asu_spotlight
 dependencies[] = asu_spotlight
 dependencies[] = ctools
