@@ -1,7 +1,11 @@
 ASU Spotlight (Flexslider)
 
-asu_spotlight 7.x-1.6.1
+asu_spotlight 7.x-1.7.1
 -----------------------
+- Added gold and grey button colors
+
+asu_spotlight 7.x-1.7
+---------------------
 - fixed bug in update hook which result in revision table column not being added
 
 V 1.6
